Fixed overflow on restaurants 'pages.

--- a/_sass/_normalize.scss
+++ b/_sass/_normalize.scss
@@ -3,6 +3,7 @@ body {
     @include no-margin-neither-padding;
     @include text-font;
     color: $black;
+    overflow-x: hidden;
 }
 
 a,
